unpackaged/objects/SSIS_Integration_Task_Log__c.object
<CustomObject>
  <fields>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Delete_Row_Count__c</fullName>
    <label>Delete Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>End_Date_Time__c</fullName>
    <label>End Date Time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Error_Row_Count__c</fullName>
    <label>Error Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Extract_Filter__c</fullName>
    <label>Extract Filter</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Extract_Row_Count__c</fullName>
    <label>Extract Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SSIS_Integration_Log__c</fullName>
    <label>SSIS Integration Log</label>
    <referenceTo>SSIS_Integration_Log__c</referenceTo>
    <relationshipLabel>SSIS Integraiton Task Logs</relationshipLabel>
    <relationshipName>SSIS_Integraiton_Task_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>SSIS_Task_Execution_Instance_Id__c</fullName>
    <externalId>true</externalId>
    <label>SSIS Task Execution Instance Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Status_Update_Date_Time__c</fullName>
    <label>Status Update Date Time</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Upsert_Row_Count__c</fullName>
    <label>Upsert Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>SSIS Integration Task Log</label>
  <nameField>
    <label>SSIS Integration Task Log Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>SSIS Integration Task Logs</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>